Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61975

qhash.cpp:148:54: error: attribute(target("+crc")) is unknown

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.8.0, 5.9.1
    • Core: Other
    • None
    • Buildroot-Crosscompile for Raspberry3 (32bit)
    • b7722c251c3a0938c7c71fc3da47fdbe920060b7

    Description

      .../build_rpi3_002/build-002-binutils-2-28/host/bin/arm-buildroot-linux-gnueabihf-g++ -c -pipe -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os --sysroot=.../build_rpi3_002/build-002-binutils-2-28/host/arm-buildroot-linux-gnueabihf/sysroot -O3 -O3 -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -Wall -W -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -D_REENTRANT -fPIC -DQT_NO_USING_NAMESPACE -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_CORE_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -I. -Iglobal -I../3rdparty/harfbuzz/src -I../3rdparty/md5 -I../3rdparty/md4 -I../3rdparty/sha3 -I../3rdparty/double-conversion/include -I../3rdparty/double-conversion/include/double-conversion -I../3rdparty/forkfd -I../../include -I../../include/QtCore -I../../include/QtCore/5.9.1 -I../../include/QtCore/5.9.1/QtCore -I.moc -I../../mkspecs/devices/linux-buildroot-g++ -o .obj/qhash.o tools/qhash.cpp
      tools/qhash.cpp:148:54: error: attribute(target("+crc")) is unknown
       static uint crc32(const Char *ptr, size_t len, uint h)
                                                            ^
      Makefile:14099: recipe for target '.obj/qhash.o' failed
      make[2]: *** [.obj/qhash.o] Error 1
      make[2]: Leaving directory '.../build_rpi3_002/build-002-binutils-2-28/build/qt5base-5.9.1/src/corelib'
      Makefile:192: recipe for target 'sub-corelib-make_first' failed
      make[1]: *** [sub-corelib-make_first] Error 2
      make[1]: Leaving directory '.../build_rpi3_002/build-002-binutils-2-28/build/qt5base-5.9.1/src'
      Makefile:48: recipe for target 'sub-src-make_first' failed
      make: *** [sub-src-make_first] Error 2
      

      Buildroot-Crosscompile for Raspberry3 (32bit), recent git version with the change from Cortex-A7 to Cortex-A53 for the 32-bit GCC compiler target.

      The 'attribute(target("+crc"))' is known for aarch64 but not for 32-bit arm, see https://gcc.gnu.org/onlinedocs/gcc/AArch64-Function-Attributes.html and https://gcc.gnu.org/onlinedocs/gcc/ARM-Function-Attributes.html for details.

      Related to QTBUG-53674 linking to a fix (but only for the 64-bit case).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            p_seiderer Peter Seiderer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes