src/corelib/tools/qsimd_p.h
@@ -326,7 +326,10 @@
 #endif
 // AArch64/ARM64
 #if defined(Q_PROCESSOR_ARM_V8) && defined(__ARM_FEATURE_CRC32)
+#if defined(Q_PROCESSOR_ARM_64)
+// only available on aarch64
 #define QT_FUNCTION_TARGET_STRING_CRC32      "+crc"
+#endif
 #  include <arm_acle.h>
 #endif
 
